# Archive

./: .gitignore  README.md
Ideas/: README.md
Notes/AWS/EC2/: Setting Up Development Environment.md
Notes/Lecture/데이터구조론/: Midterm.md  Review.md
Notes/docs/: Pre Data Structures.md
Projects/Yzip/: README.md
Projects/Yzip/ios/Yzip.xcodeproj/: project.pbxproj
Projects/Yzip/ios/YzipTests/: YzipTests.swift
Projects/Yzip/ios/YzipUITests/: YzipUITests.swift  YzipUITestsLaunchTests.swift
Prototypes/FerroCore/: Cargo.toml
Prototypes/FerroCore/crates/auth/: Cargo.toml
Prototypes/FerroCore/crates/shared/: Cargo.toml
Prototypes/FerroCore/crates/shared/src/: config.rs
Prototypes/FerroCore/crates/shared/src/aws/: client.rs  dynamodb.rs  lambda.rs  mod.rs  s3.rs
Prototypes/FerroCore/crates/shared/src/interface/: database.rs  mod.rs  storage.rs
Prototypes/FerroCore/crates/shared/src/interface/aws/: lambda.rs
Prototypes/Portfolio/: README.md  about.html  index.html  template.html
Prototypes/Portfolio/common/components/: footer.html  header.html  (+1 more)
Prototypes/ymccb/backend/: .env.example  Cargo.toml  Result.txt  routeIds.json
Prototypes/ymccb/backend/data_collector/: Cargo.toml
Prototypes/ymccb/backend/data_collector/src/: main.rs
Prototypes/ymccb/backend/data_collector/src/clients/: get_location.rs  mod.rs
Prototypes/ymccb/backend/data_collector/src/db/: mod.rs  redis.rs
Prototypes/ymccb/backend/data_collector/src/services/: mod.rs  processer.rs  scheduler.rs
Prototypes/ymccb/legacy/: README.md  index.html
Prototypes/ymccb/tabler/: README.md
(+91 files in other folders)
