[package]
name = "data_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

futures = "0.3"
rusqlite = "0.34"
serde_json = "1.0"
tracing = "0.1"
log = "0.4"
chrono = "0.4"

tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.29", features = ["tokio-comp"] }
